--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,118 @@
-/* место для вашего кода */
+.content_section {
+  margin: auto;
+}
+
+.header {
+    margin-bottom: 92px;
+    margin-top: 92px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+}
+
+.header__menu {
+  position: absolute;
+  left: 50px;
+  font-size: 18px;
+  line-height: normal;
+}
+
+.nav_menu a {
+  text-decoration: none;
+}
+
+.header_link_underline {
+  border-bottom: 1px solid black;
+}
+
+.header_links-list {
+list-style-type: circle;
+display: flex;
+gap: 32px;
+}
+
+.header_links-list-item_no-bullit {
+  list-style-type: none;
+}
+
+.header_logo-image {
+  width: 148px;
+  height: 105px;
+}
+
+.address {
+  width: 240px;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px;
+}
+
+.address a {
+  text-decoration: none;
+  border-bottom: 1px solid black;
+}
+
+.address address {
+  font-style: normal;
+}
+
+.header_address {
+  position: absolute;
+  right: 50px;
+}
+
+.cover {
+  position: relative;
+  background-image: url(/images/cover.jpg);
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  color: #FFF;
+}
+
+.overlay {
+  background: #00000060;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+}
+
+.cover_title {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.aligner-text {
+  z-index: 2;
+  font-size: 100px;
+  font-weight: 700;
+  line-height: 115%;
+  letter-spacing: 30px;
+  text-transform: uppercase;
+  padding: 165px 50px 135px 50px;
+}
+
+.aligner-text_center {
+  align-self: center;
+}
+
+.aligner-text_right {
+  align-self: flex-end;
+}
+
+.cover_description {
+  display: flex;
+  position: relative;
+  z-index: 2;
+}
+
+.cover_description-text {
+  font-size: 22px;
+  font-weight: 400;
+  line-height: 28px;
+  text-transform: uppercase;
+}
+
