--- a/styles/style.css
+++ b/styles/style.css
@@ -110,7 +110,6 @@
   align-self: flex-end;
 }
 
-
 .no_letter-spacing {
   letter-spacing: 0;
 }
@@ -137,7 +136,6 @@
 .cover_description-text-spacing {
   word-spacing: 22px;
 }
-
 
 .bet-button {
   background: none;
@@ -190,6 +188,7 @@
   padding: 50px 40px;
   display: flex;
   flex-direction: column;
+  background-position: center;
   justify-content: space-between;
   background-size: cover;
   background-repeat: no-repeat;
@@ -231,6 +230,8 @@
   font-weight: 400;
   font-size: 20px;
   line-height: normal;
+  border-bottom: 1px solid black;
+  text-decoration: none;
 }
 
 .about {
